--- a/ProjectStarter/ProjectStarter/projectSample.tex
+++ b/ProjectStarter/ProjectStarter/projectSample.tex
@@ -243,7 +243,7 @@ Use Case ID & Use Case Name & Primary Actor & Complexity & Priority \\
 \begin{itemize}
 \item[Use Case Number:] 1
 \item[Use Case Name:] Start New Game
-\item[Description:] The player decides to begin the game from the beginning (Level 1). They will click on the ``New Game" button (see Figure \ref{Start Mockup.png}). This will load the first level of the game (see Figure \ref{Level Mockup.png}). NOTE:This is only a conceptualized level meant to show loading into a level, not specifically level 1.
+\item[Description:] The player decides to begin the game from the beginning (Level 1). They will click on the ``New Game" button (see Figure \ref{Start Mockup}). This will load the first level of the game (see Figure \ref{Level Mockup}). NOTE:This is only a conceptualized level meant to show loading into a level, not specifically level 1.
 \end{itemize}
 
 Process flow:
@@ -258,7 +258,7 @@ Process flow:
 \begin{itemize}
 \item[Use Case Number:] 2
 \item[Use Case Name:] Level Select
-\item[Description:] The player is on the main menu. The player wishes to choose a specific level in the game to play. They will left-click the ``Level Select" button on the main menu, and the screen will update to show a list of levels in vertical descending order. The player then left-click a button corresponding to a specific level, and the game will load the corresponding level (see Figure \ref{Select Mockup.png}).
+\item[Description:] The player is on the main menu. The player wishes to choose a specific level in the game to play. They will left-click the ``Level Select" button on the main menu, and the screen will update to show a list of levels in vertical descending order. The player then left-click a button corresponding to a specific level, and the game will load the corresponding level (see Figure \ref{Select Mockup}).
 \end{itemize}
 
 Process flow:
@@ -301,29 +301,29 @@ Alternative: Player character is already jumping
 \begin{figure}[ht!]
 \includegraphics[height=250px, width=400px]{Level Mockup.png}
 \caption{Mockup of a player loading into a level}
-\label{Level Mockup.png}
+\label{Level Mockup}
 \end{figure}
 
 \begin{figure}[ht!]
 \includegraphics[height=250px, width=400px]{Start Mockup.png}
 \caption{Mockup of the main menu screen}
-\label{Start Mockup.png}
+\label{Start Mockup}
 \end{figure}
 
 \begin{figure}[ht!]
 \includegraphics[height=250px, width=400px]{Select Mockup.png}
 \caption{Mockup of the level select screen}
-\label{Select Mockup.png}
+\label{Select Mockup}
 \end{figure}
 
 
 
 \section{Project Timeline}
-Refer to figure 4.
+Refer to Figure \ref{Timeline}.
 \begin{figure}[ht!]
 \includegraphics[height=400px, width=300px]{Timeline.jpg}
 \caption{Timeline}
-\label{Timeline.jpg}
+\label{Timeline}
 \end{figure}
 
 
@@ -331,11 +331,16 @@ Refer to figure 4.
 At first, this will be a little empty (it will need to be filled in by the time you turn in your final report).  This is your chance to discuss all of your design decisions (consider this the README's big brother).
 
 \subsection{UML Outline}
-Show the full structure of your program.  Make sure to keep on updating this section as your project evolves (you often start out with one plan, but end up modifying things as you move along).  As a note, while Dia fails miserably at generating pdfs (probably my fault), I have had much success with png files.  Make sure to wrap your images in a \texttt{figure} environment, and to reference with the \texttt{ref} command.  For example, see Figure \ref{cat2}.
+Facade: refer to Figure \ref{Facade}.
+\begin{figure}[ht!]
+\includegraphics[height=350px, width=400px]{Facade.png}
+\caption{Facade Outline}
+\label{Facade}
+\end{figure}
 
 \begin{figure}[ht!]
 \includegraphics[scale=1.5]{cat2.jpg}
-\caption{Your figures should be in the \emph{figure} environment, and have captions.  Should also be of diagrams pertaining to your project, not random internet kittens}
+\caption{Morale Support}
 \label{cat2}
 \end{figure}
 
