--- a/Platformer_Project/Properties/Resources.resx
+++ b/Platformer_Project/Properties/Resources.resx
@@ -121,7 +121,85 @@
   <data name="A_City_Without_Sleep" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Music\Menu\A_City_Without_Sleep.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Cake" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\Cake.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dash1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Character\Dash1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L1Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Select\L1Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\1\L1-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L1_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\1\L1-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L1_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\1\L1-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L1_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\1\L1-4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Select\L2Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\2\L2-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\2\L2-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\2\L2-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\2\L2-4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L2_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\2\L2-5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Select\L3Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\3\L3-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\3\L3-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\3\L3-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\3\L3-4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="L3_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\3\L3-5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LevelBG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Levels\LevelBG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Neon_Prison" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Music\Level\Neon_Prison.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="QuitBTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Start\QuitBTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SelectBGv3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Select\SelectBGv3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SelectBTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Start\SelectBTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpriteV5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Character\SpriteV5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StartBTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Start\StartBTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StartMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Start\StartMenu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
