--- a/Platformer_Project/Properties/Resources.resx
+++ b/Platformer_Project/Properties/Resources.resx
@@ -193,8 +193,11 @@
   <data name="SelectBTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Start\SelectBTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SpriteV5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Character\SpriteV5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SpriteLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Character\SpriteLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpriteRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Character\SpriteRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StartBTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Start\StartBTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
