--- a/ProjectStarter/ProjectStarter/projectSample.tex
+++ b/ProjectStarter/ProjectStarter/projectSample.tex
@@ -141,7 +141,7 @@
 
 \begin{document}
 
-\title{3ly-Zium\\ for UTM CSCI 352}
+\title{3ly-Zium (Elysium)\\ for UTM CSCI 352}
 %
 %
 
@@ -152,7 +152,7 @@
 
 \IEEEtitleabstractindextext{%
 \begin{abstract}
-The project is a video game in the 2D platformer genre. The player is made to run through a level, and upon each successful completion, the level is changed to increase the difficulty. The intended target is people that play video games, primarily those that stream games as live reactions mesh well with high difficulties.
+This project is a video game in the 2D platformer genre. The player will run through a level, and upon each successful completion, the level is changed to increase the difficulty. The player will play through the stages in an attempt to reach high difficulty stages. The intended target is people that play video games, primarily those that stream games, as live reactions mesh well with high difficulties.
 \end{abstract}
 
 }
@@ -173,7 +173,7 @@ The project is a video game in the 2D platformer genre. The player is made to ru
 
 
 
-This project is a video game in the genre of 2D platformer. The goal of the game is to reach the exit of the level that the player character is placed in. The level’s layout will progressively get more complex with each clear, along with adding new hazards that increase the difficulty further. The penalty for failing a level is to be sent back to the beginning of said level, allowing the player to learn the level with every attempt.
+This project is a video game in the genre of 2D platformer. The goal of the game is to reach the exit of the level that the player character is placed in. The level’s layout will progressively get more complex with each clear, along with adding new hazards that increase the difficulty further. The penalty for failing a level is to be sent back to the beginning of said level, allowing the player to practice the level with every attempt.
 
 The targeted audience for this project is people in the 18-34 age group who play video games on a regular basis. Specifically, those in the age group that livestream games. Due to the increasingly difficult challenge that the game provides, having live reactions of attempts to beat the game will provide content for the targeted audience.
 
@@ -192,19 +192,20 @@ We decided to make a platforming game because of our love for games in general a
 This project is not meant to impact the world in some way. The point of a game is to provide entertainment, which will only impact a portion of the population if it were to gain traction within the community. At the current time, there is no plan for a meaningful story in the game, so the impact will be purely driven by the quality of the gameplay.
 
 \subsection{Challenges}
-The main challenges will most likely be coding the physics of the player character; developing new mechanics instead of being purely moving and jumping; keeping the game fun despite the difficulty.
+The main challenges were coding the physics of the player character, developing new mechanics instead of only having the ability to move left and right and jump, and keeping the game fun despite the difficulty. Making content for streamers and making the levels increasingly challenging were also challenges.
 
 
 \section{Scope}
 This platforming game is considered done once three levels of the game are playable from start to finish with minimal bugs or exploits. The player should be able to get through these stages without too much unnecessary frustration with either the difficulty of these stages or the control of the player character. The player character should be fully implemented with all moves intact (moving, jumping) and all hazards(such as spikes) should fail the level upon contact with the player character. As a stretch goal, we want to include more levels with new hazards. An additional stretch goal is the addition of extra moves(i.e walljumping, sliding) the player character requires to progress in more difficult levels. An additional stretch goal is scaling the window and the game assets to fit more than one resolution.
 
 \subsection{Requirements}
+The requirements were gathered by considering the needs of the user when playing though and practicing the levels in the game. We determined what would fit best for playability and user convenience, especially in the case of a 2D platforming game. We then used these to put together specific necessities of the program.
 
 \subsubsection{Functional}
 \begin{itemize}
 \item User inputs via designated keys are read – the application should register the inputs and move the player character accordingly
 \item Selecting Start places the user in the first level – Unlike the level select which allows the user to choose a level, pressing the start button will immediately bring them to the first level
-\item Level fails upon contact with a hazard – should the player character run into a hazard(i.e spike), level is failed and character is returned to the starting point of the same level
+\item Level fails upon contact with a hazard – should the player character run into a hazard(i.e pits), level is failed and character is returned to the starting point of the same level
 \end{itemize}
 
 \subsubsection{Non-Functional}
@@ -226,13 +227,14 @@ These are cases in which the user will interact with the program's user interfac
 \hline
 Use Case ID & Use Case Name & Primary Actor & Complexity & Priority \\
 \hline \hline
-1 & Start New Game & User & Low & 1\\
+1 & Start New Game & User & Low & 2\\
 \hline
-2 & Level Select & User & Low & 1\\
+2 & Level Select & User & Low & 3\\
 \hline
 3 & Character Jump & User & Medium & 1\\
 \hline
 4 & Character Dash & User & Medium & 1\\
+\hline
 
 \end{tabular}
 \caption{Use case table}
@@ -258,7 +260,7 @@ Process flow:
 \begin{itemize}
 \item[Use Case Number:] 2
 \item[Use Case Name:] Level Select
-\item[Description:] The player is on the main menu. The player wishes to choose a specific level in the game to play. They will left-click the ``Level Select" button on the main menu, and the screen will update to show a list of levels in vertical descending order. The player then left-click a button corresponding to a specific level, and the game will load the corresponding level (see Figure \ref{Select Mockup}).
+\item[Description:] The player should be taken to a level select when selecting the option on the main menu, where they can select any level to play (see Figure \ref{Select Mockup}).
 \end{itemize}
 
 Process flow:
@@ -275,14 +277,14 @@ Process flow:
 \begin{itemize}
 \item[Use Case Number:] 3
 \item[Use Case Name:] Character Jump
-\item[Description:] The player is in gameplay. They wish to make the player character jump (in order to avoid hazards such as spikes). The player then hits the 'Z' key. The player character will then leap upward. The character will gradually rise up off the ground for a few seconds, then gradually fall back to the ground.
+\item[Description:] The player character should jump into the air upon the player pressing the `Z' key.
 \end{itemize}
 
 Process flow:
 
 \begin{enumerate}
 \item Player is in a stage of gameplay.
-\item The player presses the 'Z' key.
+\item The player presses the `Z' key.
 \item The player character then leaps off the ground into the air.
 \item After a few seconds of gradually rising upward, the player character then gradually falls until hitting the ground.
 \item[Termination Outcome:] The player character has completed a full jump.
@@ -291,7 +293,7 @@ Process flow:
 \begin{itemize}
 \item[Use Case Number:] 4
 \item[Use Case Name:] Character Dash
-\item[Description:] The player is in gameplay. They wish to make a character quickly travel horizontally. The player then hits the 'X' key. The player will then gain a burst of speed in the direction they are moving. This can also be used during a jump.
+\item[Description:] The character should dash forward in the direction being faced when pressing the `X` key.
 \end{itemize}
 
 Process flow:
@@ -305,6 +307,9 @@ Process flow:
 
 
 \subsection{Interface Mockups}
+In Figure \ref{Level1 Mockup}, this shows the player character (in the top left corner of the mockup) standing in the initial state when Level 1 begins. The character can traverse the platforms (the graphical rectangles that stick out from the background) to reach the right of the screen (which is where the goal would be). Falling in the pit would send you back to that position.
+Figure \ref{Start Mockup} shows the title screen that you see upon starting the program. The three options under the graphic (from left to right) start you into Level 1, take you to the level select screen, and close the program respectively.
+Figure \ref{Select Mockup} shows the level select which you can reach from the title screen's middle option. Selecting ``Level 1," ``Level 2," or ``Level 3" will start the player in the corresponding level of the game.
 \begin{figure}[ht!]
 \includegraphics[height=250px, width=400px]{Level1 Mockup.png}
 \caption{Mockup of a player loading into level 1}
@@ -328,19 +333,19 @@ Process flow:
 \section{Project Timeline}
 Refer to Figure \ref{Timeline}.
 
-The first item is where we propose the idea of a 2D platformer game.
+February 5th is where we propose the idea of a 2D platformer game.
 
-The second item sees us writing up use cases and setting requirements. Concepts are put into place with mockups being created.
+March 1st sees us writing up use cases and setting requirements. Concepts are put into place with mockups being created.
 
-The third item is where the project is updated with designs that are more fleshed out and close to final. Initial structure ideas are outlined in a preliminary UML.
+March 28th is when the project is updated with designs that are more fleshed out and close to final. Initial structure ideas are outlined in a preliminary UML.
 
-The fourth item has movement being more or less completed, with wall and ground collision now being worked on.
+April 8th has movement being more or less completed, with wall and ground collision now being worked on.
 
-The fifth item has collision being finished or nearly finished. Level loading has begun implementation or is approaching implementation.
+April 15th has collision being finished or nearly finished. Level loading has begun implementation or is approaching implementation.
 
-The sixth item has level loading finished or nearing completion. Menus have begun implementation. Bug testing has begun.
+April 22nd has level loading finished or nearing completion. Menus have begun implementation. Bug testing has begun.
 
-The last item has the project being completed, having met all goals and running with few bugs.
+Lastly, April 28th has the project being completed, having met all goals and running with few bugs.
 \begin{figure}[ht!]
 \includegraphics[height=400px, width=300px]{Timeline.jpg}
 \caption{Timeline}
@@ -365,24 +370,19 @@ The Surface object and Goal object are both children of the Collision interface 
 
 The RectangleAdapter class adapts a Rectangle into a RectangleAdapter type, which allows Surface, Goal, and Player objects to inherit from it. This is to get around the Rectangle class being a sealed class.
 \begin{figure}[ht!]
-\includegraphics[height=250px, width=500px]{Penultimate_UML.png}
+\includegraphics[height=250px, width=500px]{elyzium_uml.png}
 \caption{UML Outline}
 \label{Facade}
 \end{figure}
 
-\begin{figure}[ht!]
-\includegraphics[scale=1.5]{cat2.jpg}
-\caption{Morale Support}
-\label{cat2}
-\end{figure}
 
 
 \subsection{Design Patterns Used}
-The 2 design patterns used are the Strategy pattern and the Adapter pattern.
+The 2 design patterns used are the Factory pattern and the Decorator pattern.
 
-Strategy: On the level select, a different level is chosen depending on what button the user selects on that screen. Depending on the selection, either of 3 strategies (Levels) can be instantiated: Level1, Level2, or Level3.
+Factory: Your selection from Window2 (Level select window) will create an instance of one of the three levels depending on the selection.
 
-Adapter: The adapter pattern is used to adapt a Rectangle into being a RectangleAdapter, which is to get around the fact that Rectangle on its own cannot be inherited from, as it is a sealed class. The Surface, Goal, and Player objects then inherit from RectangleAdapter.
+Decorator: A QuitDecorator decorates one of the buttons on Window1 (title screen) to add extra functionality. In this case, it adds a ``Thanks for playing!" message whenever clicking it.
 
 
 \section{Results}
@@ -394,27 +394,7 @@ From here, we plan to potentially clean up what we have even further. After all 
 
 
 
-\begin{thebibliography}{Captain Ahab}
-\item Wasn't sure how to remove this.
-\end{thebibliography}
 
-
-\begin{IEEEbiography}{Michael Shell}
-Biography text here.
-\end{IEEEbiography}
-
-% if you will not have a photo at all:
-\begin{IEEEbiographynophoto}{John Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
-
-% insert where needed to balance the two columns on the last page with
-% biographies
-%\newpage
-
-\begin{IEEEbiographynophoto}{Jane Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
 
 
 
